--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -16,46 +16,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor(3.)\n",
-    "w = torch.tensor(4., requires_grad=True)\n",
-    "b = torch.tensor(5., requires_grad=True)"
+    "inputs = np.array([[73, 67, 43], \n",
+    "                 [91, 88, 64], \n",
+    "                 [87, 134, 58],\n",
+    "                 [102, 43, 37], \n",
+    "                 [69, 96, 70]], dtype = 'float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = x*w + b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.backward()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dy/dw: tensor(3.)\n",
-      "dy/db: tensor(1.)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('dy/dw:', w.grad)\n",
-    "print('dy/db:', b.grad)"
+    "targets = np.array([[56, 70],\n",
+    "                   [81, 101],\n",
+    "                   [119, 133],\n",
+    "                   [22, 37],\n",
+    "                   [103, 119]], dtype = 'float32')"
    ]
   },
   {
