--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -38,6 +38,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = torch.from_numpy(inputs)\n",
+    "targets = torch.from_numpy(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = torch.rand(2, 3, requires_grad=True)\n",
+    "b = torch.rand(2, requires_grad=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(x):\n",
+    "    result = torch.mm(x, w.t()) + b\n",
+    "    return(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mse(t1, t2):\n",
+    "    diff = t1 - t2\n",
+    "    mse = torch.sum(diff * diff)  /diff.numel()\n",
+    "    return(mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 56.,  70.],\n",
+      "        [ 81., 101.],\n",
+      "        [119., 133.],\n",
+      "        [ 22.,  37.],\n",
+      "        [103., 119.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
