--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = model(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,23 +81,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1000):\n",
+    "    prediction = model(inputs)\n",
+    "    loss = mse(prediction, targets)\n",
+    "    loss.backward()\n",
+    "    \n",
+    "    # no_grad() only want update values\n",
+    "    with torch.no_grad():\n",
+    "        w -= w.grad * 1e-5\n",
+    "        b -= b.grad * 1e-5\n",
+    "        w.grad.zero_()\n",
+    "        b.grad.zero_()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = mse(prediction, targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 56.,  70.],\n",
-      "        [ 81., 101.],\n",
-      "        [119., 133.],\n",
-      "        [ 22.,  37.],\n",
-      "        [103., 119.]])\n"
+      "tensor(3.5194, grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
    "source": [
-    "print(targets)"
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 57.2920,  70.6385],\n",
+      "        [ 81.7338,  98.9410],\n",
+      "        [119.5663, 136.3637],\n",
+      "        [ 21.3988,  38.0578],\n",
+      "        [100.9860, 115.6583]], grad_fn=<ThAddBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prediction)"
    ]
   },
   {
